Update alignViews in mergeview.ts to correct padding issues (only the diff is implemented) Update css files

--- a/packages/nbdime/src/styles/diff.css
+++ b/packages/nbdime/src/styles/diff.css
@@ -149,6 +149,11 @@
   text-align: center;
 }
 
+.jp-Notebook-diff .cm-line {
+  border-top: 1px solid transparent;
+  border-bottom: 1px solid transparent;
+}
+
 /* Color diff highlighting according to style vars */
 .jp-Notebook-diff .cm-merge-r-chunk { background-color: var(--jp-diff-deleted-color2); }
 .jp-Notebook-diff .cm-merge-r-chunk-start { border-top: 1px solid var(--jp-diff-deleted-color0); }
